@@ -1,5 +1,6 @@
 v. 0.17.8
 - bio ins dart ammo cost least wood
+- add battery to power pole
 
 v. 0.17.7
 - hot fix add unlock mixing furnace to optics research
